test(sanside): #106 improve all tests for multiple roles
refs #106