@@ -6,6 +6,7 @@ import fr.ght1pc9kc.baywatch.common.infra.PredicateSearchVisitor;
 import fr.ght1pc9kc.baywatch.common.infra.mappers.BaywatchMapper;
 import fr.ght1pc9kc.baywatch.common.infra.mappers.PropertiesMappers;
 import fr.ght1pc9kc.baywatch.dsl.tables.records.UsersRecord;
+import fr.ght1pc9kc.baywatch.dsl.tables.records.UsersRolesRecord;
 import fr.ght1pc9kc.baywatch.security.api.model.User;
 import fr.ght1pc9kc.baywatch.security.domain.ports.UserPersistencePort;
 import fr.ght1pc9kc.baywatch.techwatch.domain.model.QueryContext;
@@ -16,8 +17,10 @@ import lombok.extern.slf4j.Slf4j;
 import org.jooq.Condition;
 import org.jooq.Cursor;
 import org.jooq.DSLContext;
+import org.jooq.Record;
 import org.jooq.Result;
 import org.jooq.Select;
+import org.jooq.impl.DSL;
 import org.springframework.stereotype.Repository;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
@@ -26,16 +29,17 @@ import reactor.core.scheduler.Scheduler;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static fr.ght1pc9kc.baywatch.common.infra.mappers.PropertiesMappers.USER_PROPERTIES_MAPPING;
 import static fr.ght1pc9kc.baywatch.dsl.tables.FeedsUsers.FEEDS_USERS;
 import static fr.ght1pc9kc.baywatch.dsl.tables.NewsUserState.NEWS_USER_STATE;
 import static fr.ght1pc9kc.baywatch.dsl.tables.Users.USERS;
+import static fr.ght1pc9kc.baywatch.dsl.tables.UsersRoles.USERS_ROLES;
 
 @Slf4j
 @Repository
 @RequiredArgsConstructor
+@SuppressWarnings("BlockingMethodInNonBlockingContext")
 public class UserRepository implements UserPersistencePort {
     private static final JooqConditionVisitor JOOQ_CONDITION_VISITOR =
             new JooqConditionVisitor(PropertiesMappers.USER_PROPERTIES_MAPPING::get);
@@ -51,22 +55,27 @@ public class UserRepository implements UserPersistencePort {
     }
 
     @Override
+    @SuppressWarnings("resource")
     public Flux<Entity<User>> list(QueryContext qCtx) {
         Condition conditions = qCtx.filter.accept(JOOQ_CONDITION_VISITOR);
-        final Select<UsersRecord> select = JooqPagination.apply(
+        Select<Record> select = JooqPagination.apply(
                 qCtx.pagination, USER_PROPERTIES_MAPPING,
-                dsl.selectFrom(USERS).where(conditions));
+                dsl.select(USERS.fields()).select(DSL.groupConcat(USERS_ROLES.USRO_ROLE).as(USERS_ROLES.USRO_ROLE.getName()))
+                        .from(USERS)
+                        .join(USERS_ROLES).on(USERS_ROLES.USRO_USER_ID.eq(USERS.USER_ID))
+                        .where(conditions)
+                        .groupBy(USERS.fields()));
 
-        return Flux.<UsersRecord>create(sink -> {
-                    Cursor<UsersRecord> cursor = select.fetchLazy();
+        return Flux.<Record>create(sink -> {
+                    Cursor<Record> cursor = select.fetchLazy();
                     sink.onRequest(n -> {
                         int count = (int) n;
-                        Result<UsersRecord> rs = cursor.fetchNext(count);
+                        Result<Record> rs = cursor.fetchNext(count);
                         rs.forEach(sink::next);
                         if (rs.size() < count) {
                             sink.complete();
                         }
-                    });
+                    }).onDispose(cursor::close);
                 }).limitRate(Integer.MAX_VALUE - 1).subscribeOn(databaseScheduler)
                 .map(baywatchConverter::recordToUserEntity)
                 .filter(qCtx.filter.accept(USER_PREDICATE_VISITOR));
@@ -86,13 +95,18 @@ public class UserRepository implements UserPersistencePort {
 
     @Override
     public Flux<Entity<User>> persist(Collection<Entity<User>> toPersist) {
-        List<UsersRecord> records = toPersist.stream()
+        List<UsersRecord> usersRecords = toPersist.stream()
                 .map(baywatchConverter::entityUserToRecord)
-                .collect(Collectors.toList());
+                .toList();
+        List<UsersRolesRecord> usersRolesRecords = toPersist.stream().flatMap(e -> e.self.roles.stream()
+                        .map(r -> USERS_ROLES.newRecord().setUsroUserId(e.id).setUsroRole(r)))
+                .toList();
 
-        return Mono.fromCallable(() ->
-                        dsl.transactionResult(tx -> tx.dsl().batchInsert(records).execute()))
-                .subscribeOn(databaseScheduler)
+        return Mono.fromCallable(() -> dsl.transactionResult(tx -> {
+                    int[] inserted = tx.dsl().batchInsert(usersRecords).execute();
+                    tx.dsl().batchInsert(usersRolesRecords).execute();
+                    return inserted;
+                })).subscribeOn(databaseScheduler)
 
                 .flatMapMany(insertedCount -> {
                     log.debug("{} user(s) inserted successfully.", Arrays.stream(insertedCount).sum());
@@ -115,6 +129,7 @@ public class UserRepository implements UserPersistencePort {
                     DSLContext txDsl = tx.dsl();
                     txDsl.deleteFrom(FEEDS_USERS).where(FEEDS_USERS.FEUS_USER_ID.in(ids)).execute();
                     txDsl.deleteFrom(NEWS_USER_STATE).where(NEWS_USER_STATE.NURS_USER_ID.in(ids)).execute();
+                    txDsl.deleteFrom(USERS_ROLES).where(USERS_ROLES.USRO_USER_ID.in(ids)).execute();
                     return txDsl.deleteFrom(USERS).where(USERS.USER_ID.in(ids)).execute();
                 })).subscribeOn(databaseScheduler);
     }
